--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <div class="container">
     <h1>Odin-recipes</h1>
     
     <a href="brocoli.html">Easy Roasted Broccoli</a><br>
     <a href="carrots.html">Glazed Carrots</a><br>
     <a href="corn.html">Irresistible Italian Corn</a><br>
-    
+        </div>
     </body>
 </html>
