--- a/carrots.html
+++ b/carrots.html
@@ -3,12 +3,14 @@
     <head>
         <title>Corn</title>
         <meta charset="UTF-8">
+        <meta charset="UTF-8">
+        <link href="style.css" rel="stylesheet">
     </head>
-    <body>
+    <body class="vegetable">
     <img src="img_racipes/Glazed-Carrots-c5b02be769834ae09b7d01e579ac81d1.webp" alt="picture of carrots">
     <p>Glazed carrots coated in a mixture of brown sugar and butter are a versatile side dish you can serve alongside a weeknight meatloaf, a Sunday ham, or your Thanksgiving turkey. These caramelized carrots are a definite kid-pleaser but they're elegant enough to impress the adults as well!</p>
     <h2>Ingredients</h2>
-    
+    <div class="Ingredients">
     <ul>
         
        <li> 2 pounds carrots, peeled and cut into sticks</li>
@@ -22,8 +24,9 @@
        <li> ⅛ teaspoon ground white pepper</li>
 
     </ul>
+  </div>
     <h2>Steps</h2>
-    <ol>
+    <ol class="Steps">
       <li>Place the carrots into a large saucepan; pour in enough water to reach depth of 1 inch and bring to a boil. </li>
         <li>Reduce heat to low, cover, and simmer carrots until tender, 8 to 10 minutes. </li>
         <li>Drain and transfer to a bowl.</li> 
