--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <head>
         <title>Racipes</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body class="front">
+       <div class="container">
     <h1>Odin-recipes</h1>
     
     <a href="brocoli.html">Easy Roasted Broccoli</a><br>
     <a href="carrots.html">Glazed Carrots</a><br>
     <a href="corn.html">Irresistible Italian Corn</a><br>
-    
+    </div>
     </body>
 </html>
