--- a/corn.html
+++ b/corn.html
@@ -3,13 +3,14 @@
     <head>
         <title>Corn</title>
         <meta charset="UTF-8">
+        <link href="style.css" rel="stylesheet">
     </head>
-    <body>
+    <body class="Italian">
     <img src="img_racipes/7243629-adffde43013e419b8b69982eb85b78ae.webp" alt="picture of corn">
     <p>This is a delicious seasoned corn side dish. DELICIOUS. Must TRY NOW!!</p>
     <h2>Ingredients</h2>
     
-    <ul>
+    <ul class="Ingredients">
         <li>1 ½ tablespoons butter</li>
         <li>2 ½ cups whole kernel sweet Corn</li>
         <li>1 tablespoon Italian seasoning</li>
@@ -17,7 +18,7 @@
 
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="Steps">
     <li>Heat a skillet over high heat.</li> 
     <li>Heat butter in hot skillet until almost completely melted; stir in corn.</li> 
     <li>Season corn with Italian seasoning, salt, and black pepper.</li>
