--- a/corn.html
+++ b/corn.html
@@ -6,11 +6,12 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body class="Italian">
+        <header class="main-header">
     <img src="img_racipes/7243629-adffde43013e419b8b69982eb85b78ae.webp" alt="picture of corn">
     <p>This is a delicious seasoned corn side dish. DELICIOUS. Must TRY NOW!!</p>
     <h2>Ingredients</h2>
     
-    <ul class="Ingredients">
+    <ul class="yellow">
         <li>1 ½ tablespoons butter</li>
         <li>2 ½ cups whole kernel sweet Corn</li>
         <li>1 tablespoon Italian seasoning</li>
@@ -18,12 +19,13 @@
 
     </ul>
     <h2>Steps</h2>
-    <ol class="Steps">
+    <ol class="corn">
     <li>Heat a skillet over high heat.</li> 
     <li>Heat butter in hot skillet until almost completely melted; stir in corn.</li> 
     <li>Season corn with Italian seasoning, salt, and black pepper.</li>
     <li> Cook seasoned corn until light golden brown, about 5 minutes.</li>
 
 </ol>
+</header>
 </body>
 </html>
