--- a/brocoli.html
+++ b/brocoli.html
@@ -9,7 +9,7 @@
     <img  src="img_racipes/1765553-easy-roasted-broccoli-FranceC-1x1-1-327e091005644ea99b1ce0107d3dd2c6.webp" alt="picture of brocoli">
     <p>Roasted broccoli is easy to make and so much more flavorsome than boiled. My favorite part is the roasted sliced stem pieces.</p>
     <h2>Ingredients</h2>
-    <div class="green">
+    <div class="Ingredients" style="border:5px solid green;">
     
     <ul>
         
@@ -23,7 +23,7 @@
     </div>
 
     <h2>Steps</h2>
-    <div class="brocoli">
+    <div class="steps">
     <ol>
       <li>Preheat the oven to 400 degrees F (200 degrees C). </li>
       <li>Cut broccoli florets from the stalk.</li> 
