--- a/corn.html
+++ b/corn.html
@@ -10,15 +10,17 @@
     <img src="img_racipes/7243629-adffde43013e419b8b69982eb85b78ae.webp" alt="picture of corn">
     <p>This is a delicious seasoned corn side dish. DELICIOUS. Must TRY NOW!!</p>
     <h2>Ingredients</h2>
-    
-    <ul class="yellow">
+    <div class="Ingredients"style=" border:5px solid yellow">
+    <ul>
         <li>1 ½ tablespoons butter</li>
         <li>2 ½ cups whole kernel sweet Corn</li>
         <li>1 tablespoon Italian seasoning</li>
         <li>1 pinch salt and ground black pepper</li>
 
     </ul>
+</div>
     <h2>Steps</h2>
+    <div class="steps">
     <ol class="corn">
     <li>Heat a skillet over high heat.</li> 
     <li>Heat butter in hot skillet until almost completely melted; stir in corn.</li> 
@@ -26,6 +28,7 @@
     <li> Cook seasoned corn until light golden brown, about 5 minutes.</li>
 
 </ol>
+</div>
 </header>
 </body>
 </html>
